...
"Onboarding.ThingsToKnow.Bullet.1" = "OONI data is openly published and will include your network information.";
"Onboarding.ThingsToKnow.Bullet.2" = "Anyone monitoring your internet activity (e.g. government or ISP) will see that you are running OONI Probe.";
"Onboarding.ThingsToKnow.Bullet.3" = "You might test banned websites (but you can choose which sites to test).";
"Onboarding.ThingsToKnow.Button" = "I understand";
"Onboarding.ThingsToKnow.LearnMore" = "Learn more";
"Onboarding.PopQuiz.Title" = "Pop Quiz";
"Onboarding.PopQuiz.True" = "True";
"Onboarding.PopQuiz.False" = "False";
"Onboarding.PopQuiz.Wrong.Button.Back" = "Go back";
"Onboarding.PopQuiz.Wrong.Button.Continue" = "Continue";
"Onboarding.PopQuiz.1.Title" = "Question 1/2";
"Onboarding.PopQuiz.1.Question" = "If someone is monitoring my internet activity, they will see that I am running OONI Probe.";
"Onboarding.PopQuiz.1.Wrong.Title" = "Warning";
...
"Onboarding.DefaultSettings.Header" = "We collect and publish:";
"Onboarding.DefaultSettings.Bullet.1" = "Country code (e.g. IT for Italy)";
"Onboarding.DefaultSettings.Bullet.2" = "Network information (including Autonomous System Number)";
"Onboarding.DefaultSettings.Bullet.3" = "Time & date of testing";
"Onboarding.DefaultSettings.Paragraph" = "We do our best not to publish your IP address or any other potentially personally identifiable information.\n\nLearn more through [OONI's Data Policy](https://ooni.org/about/data-policy/).";
"Onboarding.DefaultSettings.Paragraph.1" = "By tapping \"OK\", you will share crash reports to help us improve OONI Probe.";
"Onboarding.DefaultSettings.Button.Go" = "Let's go";
"Onboarding.DefaultSettings.Button.Change" = "Change defaults";
"Dashboard.Tab.Label" = "Dashboard";
"Dashboard.Card.Run" = "Run";
"Dashboard.Overview.LastRun.Never" = "N/A";
"Dashboard.Overview.Run" = "Run";
"Dashboard.Overview.LatestTest" = "Last test:";
"Dashboard.Overview.Estimated" = "Estimated:";
"Dashboard.Overview.ChooseWebsites" = "Choose websites";
"Dashboard.Running.Running" = "Running:";
...
