...
                                                        </stackView>
                                                    </subviews>
                                                </stackView>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="not_uploaded" translatesAutoresizingMaskIntoConstraints="NO" id="kOt-H2-UwN">
                                                    <rect key="frame" x="160.5" y="52" width="23" height="17"/>
                                                    <color key="tintColor" red="0.45882352941176469" green="0.45882352941176469" blue="0.45882352941176469" alpha="1" colorSpace="calibratedRGB"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="not_uploaded_icon">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="23" id="4RZ-VM-0A9"/>
                                                        <constraint firstAttribute="height" constant="17" id="7hO-s5-oow"/>
                                                    </constraints>
...
                                            <constraint firstAttribute="width" constant="40" id="4yo-h0-K21"/>
                                            <constraint firstAttribute="height" constant="40" id="XwR-S5-qUg"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Website" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IKy-fV-4Mb">
                                        <rect key="frame" x="30" y="56" width="354" height="22"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TestResults.Details.Hero.TestName"/>
                                        <fontDescription key="fontDescription" name="FiraSans-SemiBold" family="Fira Sans" pointSize="18"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anomaly" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A7B-Og-BzH">
                                        <rect key="frame" x="30" y="80" width="354" height="18"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TestResults.Details.Hero.Status"/>
                                        <fontDescription key="fontDescription" name="FiraSans-Regular" family="Fira Sans" pointSize="14"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" red="0.18431372549019609" green="0.61960784313725492" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
