...
                                <state key="normal" image="chevron.down" catalog="system"/>
                                <connections>
                                    <action selector="cancelTest:" destination="4q0-13-6dh" eventType="touchUpInside" id="BXH-F2-crf"/>
                                    <action selector="minimize:" destination="4q0-13-6dh" eventType="touchUpInside" id="Fhs-wl-LPa"/>
                                </connections>
                            </button>
                            <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLK-6a-JYw" customClass="ConfigureButton">
                                <rect key="frame" x="162" y="853" width="90" height="35"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Dashboard.Overview.ChooseWebsites"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="WzE-4Z-SwN"/>
                                    <constraint firstAttribute="height" constant="35" id="sOT-ai-XTw"/>
...
                                                    <constraint firstAttribute="height" constant="47" id="I9a-FP-yrO"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="s3v-i5-B1X"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="FiraSans-SemiBold" family="Fira Sans" pointSize="23"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                                <state key="normal" title="Run">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="runAll" destination="vBz-Iv-qTP" eventType="touchUpInside" id="3HN-H0-7ff"/>
                                                </connections>
                                            </button>
...
